--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   {% include bootstrap.html %}
   <title>{{ page.title | default: site.title }}</title>
 </head>
 <body>
 <div class="container">
-  <header>
-    <!-- Logo -->
-    <a href="{{ site.baseurl }}/"><img src="/path/to/your/logo.png" alt="Logo"></a>
-    <!-- Header Menu -->
-    <nav>
-      <ul class="nav">
-        <li class="nav-item"><a class="nav-link" href="#">Link 1</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Link 2</a></li>
-        <!-- Add more links as needed -->
-      </ul>
-    </nav>
-  </header>
+  {% include header.html %}  
 
   <div class="row">
     <aside class="col-md-4">
@@ -32,7 +21,7 @@
   </div>
 
   <footer>
-    <p>Your Footer Content</p>
+    {% include footer.html %}
   </footer>
 </div>
 
@@ -40,8 +29,9 @@
 <a href="#" class="btn btn-primary back-to-top">Back to Top</a>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.6/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 <script>
 // JavaScript for Back to Top button
 $(document).ready(function(){
