--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,54 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   {% include bootstrap.html %}
   <title>{{ page.title | default: site.title }}</title>
-</head>
-<body>
-<div class="container">
-  {% include header.html %}  
+  <meta name="description" content="A comprehensive resource for learning Python programming.">
+  <meta name="author" content="Zartosht Sepideman">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#000000">
+  <link rel="apple-touch-icon" href="/assets/images/logo.png">
+  <link rel="icon" type="image/png" href="/assets/images/logo.png">
 
-  <div class="row">
-    <aside class="col-md-4">
-      <!-- Sidebar/Index -->
-      <div id="sidebar" class="sticky-top">
-        <!-- Dynamically generate index/sidebar content based on .md files -->
-      </div>
-    </aside>
-    <main class="col-md-8">
-      {{ content }}
-    </main>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Qt9Hug5NfnQDGMoaQYXN1+PiQvda7poO7/6kE1ZwyB0fJv30lDfHw7H7zxE8Z9vX" crossorigin="anonymous">
+  <link href="{{ '/assets/css/main.css' | relative_url }}" rel="stylesheet">
+</head>
+
+<body>
+  <div class="container">
+    {% include header.html %}
+
+    <div class="row">
+      <aside class="col-md-4">
+        <!-- Sidebar/Index -->
+        <div id="sidebar" class="sticky-top">
+          <!-- Dynamically generate index/sidebar content based on .md files -->
+        </div>
+      </aside>
+      <main class="col-md-8">
+        {{ content }}
+      </main>
+    </div>
   </div>
 
-  <footer>
-    {% include footer.html %}
-  </footer>
-</div>
+  <div class="container-fluid">
+    <footer>
+      {% include footer.html %}
+    </footer>
+  </div>
 
-<!-- Back to Top Button -->
-<a href="#" class="btn btn-primary back-to-top">Back to Top</a>
+  <!-- Back to Top Button -->
+  <a href="#" class="btn btn-primary back-to-top">Back to Top</a>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.6/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.6/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIU/de3+IXWm3Sz3n2QqoPRyN5tvavbUe1k5Ctvh+XlDhOyL5h0jUkao"
+    crossorigin="anonymous"></script>
 
-<script>
-// JavaScript for Back to Top button
-$(document).ready(function(){
-  $(window).scroll(function () {
-     if ($(this).scrollTop() > 50) {
-         $('.back-to-top').fadeIn();
-     } else {
-         $('.back-to-top').fadeOut();
-     }
-  });
-  $('.back-to-top').click(function () {
-     $('body,html').animate({
-         scrollTop: 0
-     }, 400);
-     return false;
-  });
-});
-</script>
+  <script>
+    // JavaScript for Back to Top button
+    $(document).ready(function () {
+      $(window).scroll(function () {
+        if ($(this).scrollTop() > 50) {
+          $('.back-to-top').fadeIn();
+        } else {
+          $('.back-to-top').fadeOut();
+        }
+      });
+      $('.back-to-top').click(function () {
+        $('body,html').animate({
+          scrollTop: 0
+        }, 400);
+        return false;
+      });
+    });
+  </script>
 </body>
+
 </html>
