--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,3 @@
 <header>
-  <a href="{{ site.baseurl }}/"><img src="assets/images/logo.png" alt="Logo"></a>
+  <a href="{{ site.baseurl }}/"><img src="{{ 'assets/images/logo.png' | relative_url }}" alt="Logo"></a>
 </header>
