--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,14 @@
   <link rel="apple-touch-icon" href="/assets/images/logo.png">
   <link rel="icon" type="image/png" href="/assets/images/logo.png">
 
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Qt9Hug5NfnQDGMoaQYXN1+PiQvda7poO7/6kE1ZwyB0fJv30lDfHw7H7zxE8Z9vX" crossorigin="anonymous">
-  <link href="{{ '/assets/css/main.css' | relative_url }}" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="{{ 'assets/css/main.css' | relative_url }}" rel="stylesheet">
 </head>
 
 <body>
@@ -44,9 +48,8 @@
   <a href="#" class="btn btn-primary back-to-top">Back to Top</a>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.6/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIU/de3+IXWm3Sz3n2QqoPRyN5tvavbUe1k5Ctvh+XlDhOyL5h0jUkao"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 
   <script>
