--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,9 @@
-<header>
-  <a href="{{ site.baseurl }}/"><img src="{{ 'assets/images/logo.png' | relative_url }}" alt="Logo"></a>
-</header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">
+      <img src="{{ 'assets/images/logo.png' | relative_url }}" alt="Logo" width="60" height="60"
+        class="d-inline-block align-top">
+      {{ page.title | default: site.title }}
+    </a>
+  </div>
+</nav>
