--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,25 +51,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-
-  <script>
-    // JavaScript for Back to Top button
-    $(document).ready(function () {
-      $(window).scroll(function () {
-        if ($(this).scrollTop() > 50) {
-          $('.back-to-top').fadeIn();
-        } else {
-          $('.back-to-top').fadeOut();
-        }
-      });
-      $('.back-to-top').click(function () {
-        $('body,html').animate({
-          scrollTop: 0
-        }, 400);
-        return false;
-      });
-    });
-  </script>
+  <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
 </body>
 
 </html>
