--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
   <meta name="author" content="Zartosht Sepideman">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#000000">
-  <link rel="apple-touch-icon" href="/assets/images/logo.png">
-  <link rel="icon" type="image/png" href="/assets/images/logo.png">
+  <link rel="apple-touch-icon" href="{{ 'assets/images/logo.png' | relative_url }}">
+  <link rel="icon" type="image/png" href="{{ 'assets/images/logo.png' | relative_url }}">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,8 +22,11 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
     {% include header.html %}
+  </div>
+  
+  <div class="container">
 
     <div class="row">
       <aside class="col-md-4">
