--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -10,31 +10,61 @@ h1, h2, h3, h4, h5, h6
   font-family: 'Roboto', sans-serif
   font-weight: 700 // For a bolder heading, optional
 
-.back-to-top
-  position: fixed
-  bottom: 25px
-  right: 25px
-  display: none
+#button
+  display: inline-block
+  background-color: #FF9800
   width: 50px
   height: 50px
   text-align: center
-  line-height: 50px
-  background-color: #f5f5f5
-  color: #333
-  border-radius: 3px
-  z-index: 9999
-
-.code-copy-btn
-  position: absolute
-  top: 0.5rem
-  right: 0.5rem
-  border: none
-  background-color: #007bff
-  color: white
-  cursor: pointer
   border-radius: 4px
-  padding: 0.25rem 0.5rem
-  font-size: 0.875rem
+  position: fixed
+  bottom: 30px
+  right: 30px
+  transition: background-color .3s, opacity .5s, visibility .5s
+  opacity: 0
+  visibility: hidden
+  z-index: 1000
+
+  &::after
+    content: "\f077"
+    font-family: FontAwesome
+    font-weight: normal
+    font-style: normal
+    font-size: 2em
+    line-height: 50px
+    color: #fff
 
   &:hover
-    background-color: #0056b3
+    cursor: pointer
+    background-color: #333
+
+  &:active
+    background-color: #555
+
+  &.show
+    opacity: 1
+    visibility: visible
+
+.content
+  width: 77%
+  margin: 50px auto
+  font-family: 'Merriweather', serif
+  font-size: 17px
+  color: #6c767a
+  line-height: 1.9
+
+  @media (min-width: 500px)
+    width: 43%
+
+  h1
+    margin-bottom: -10px
+    color: #03a9f4
+    line-height: 1.5
+
+  h3
+    font-style: italic
+    color: #96a2a7
+
+#button
+  @media (min-width: 500px)
+    margin: 30px
