--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -68,3 +68,16 @@ h1, h2, h3, h4, h5, h6
 #button
   @media (min-width: 500px)
     margin: 30px
+
+.highlighter-rouge
+  margin: 2rem 0
+
+  .highlight
+    padding: 0.5rem
+    border-radius: 1rem
+
+.container-fluid
+  padding: 0
+
+footer
+  margin-top: 2rem
