--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -48,10 +48,14 @@ h1, h2, h3, h4, h5, h6
 .content
   width: 77%
   margin: 50px auto
-  font-family: 'Merriweather', serif
+  font-family: 'Roboto', serif
   font-size: 17px
   color: #6c767a
   line-height: 1.9
+
+  p
+    margin-bottom: 20px
+    font-size: 1.2em
 
   @media (min-width: 500px)
     width: 43%
