--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -86,3 +86,17 @@ h1, h2, h3, h4, h5, h6
 
 footer
   margin-top: 2rem
+
+.copy-btn
+  position: absolute
+  top: 5px
+  right: 5px
+  background-color: #007bff
+  color: white
+  border: none
+  border-radius: 3px
+  padding: 0.5em
+  cursor: pointer
+
+  &:hover
+    background-color: #0056b3
