--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -87,6 +87,10 @@ h1, h2, h3, h4, h5, h6
 footer
   margin-top: 2rem
 
+div
+  &.highlight
+    position: relative
+
 .copy-btn
   position: absolute
   top: 5px
