--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -95,12 +95,9 @@ div
   position: absolute
   top: 5px
   right: 5px
-  background-color: #007bff
   color: white
   border: none
-  border-radius: 3px
-  padding: 0.5em
   cursor: pointer
 
   &:hover
-    background-color: #0056b3
+    color: #FF9800
