--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -93,8 +93,9 @@ div
 
 .copy-btn
   position: absolute
-  top: 5px
-  right: 5px
+  top: 10px
+  right: 10px
+  background: none
   color: white
   border: none
   cursor: pointer
