--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -6,6 +6,7 @@
 body, button, input, select, optgroup, textarea
   font-family: 'Roboto', sans-serif
   font-size: 16px
+  line-height: 1.6
 
 h1, h2, h3, h4, h5, h6
   font-family: 'Roboto', sans-serif
