--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{ site.baseurl }}">
+    <a class="navbar-brand" href="{{ site.baseurl }}/">
       <img src="{{ 'assets/images/logo.png' | relative_url }}" alt="Logo" width="60" height="60"
         class="d-inline-block align-top">
       {{ page.title | default: site.title }}
