--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -3,7 +3,7 @@
   padding: 0
   box-sizing: border-box
 
-body, button, input, select, optgroup, textarea
+body, button, input, select, optgroup, textarea, li
   font-family: 'Roboto', sans-serif
   font-size: 16px
   line-height: 1.6
