--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,9 @@
     </footer>
   </div>
 
-  <a id="button"></a>
+  <a id="button">
+    <i class="bi bi-chevron-compact-up"></i>
+  </a>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script>
