--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -15,6 +15,7 @@ h1, h2, h3, h4, h5, h6
 #button
   display: inline-block
   background-color: #FF9800
+  color: white
   width: 50px
   height: 50px
   text-align: center
@@ -26,15 +27,6 @@ h1, h2, h3, h4, h5, h6
   opacity: 0
   visibility: hidden
   z-index: 1000
-
-  &::after
-    content: "\f077"
-    font-family: FontAwesome
-    font-weight: normal
-    font-style: normal
-    font-size: 2em
-    line-height: 50px
-    color: #fff
 
   &:hover
     cursor: pointer
