--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -8,6 +8,13 @@ body, button, input, select, optgroup, textarea, li
   font-size: 16px
   line-height: 1.6rem
 
+li
+  line-height: 2rem
+
+a
+  text-decoration: none
+  color: #03a9f4
+
 h1, h2, h3, h4, h5, h6
   font-family: 'Roboto', sans-serif
   font-weight: 700 // For a bolder heading, optional
