--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -104,6 +104,25 @@ div
   &:hover
     color: #FF9800
 
+.run-btn
+  position: absolute
+  top: 10px
+  right: 30px
+  background: none
+  color: white
+  border: none
+  cursor: pointer
+
+  &:hover
+    color: #FF9800
+
 code
   &.language-plaintext
     color: #d63384
+
+.python-script
+  display: block
+  padding: 1rem
+  background-color: #f5f5f5
+  border-radius: 1rem
+  margin: 2rem 0
