--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,9 +47,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-  <script src="
-    https://cdn.jsdelivr.net/npm/brython@3.12.1/brython.min.js
-    "></script>
+  <script src="https://cdn.jsdelivr.net/pyodide/v0.25.0/full/pyodide.js"></script>
   <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
 </body>
 
