--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,10 @@
     {% include header.html %}
 
     <div class="row">
-      <main class="col-md-8 mx-auto">
+      <div class="col-md-4">
+        {% include aside.html %}
+      </div>
+      <main class="col-md-8">
         {{ content }}
       </main>
     </div>
