--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,7 +1,7 @@
 <aside id="sidebar">
   <ul class="nav" class="sticky-top">
     {% for page in site.pages %}
-      {% if page.url contains '.md' and page.url != '/index.md' %}
+      {% if page.url != '/index.md' %}
         {% assign url_parts = page.url | split: '/' %}
         {% if url_parts.size == 3 %}
           <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
