--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
     {% include header.html %}
 
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 mt-2">
         {% include aside.html %}
       </div>
       <main class="col-md-8">
