--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,8 @@
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/pyodide/v0.25.0/full/pyodide.js"></script>
   <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4967292172494506"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
