--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="{{ site.baseurl }}/">
       <img src="{{ 'assets/images/logo.png' | relative_url }}" alt="Logo" width="60" height="60"
         class="d-inline-block align-top">
-      {{ page.title | default: site.title }}
+      {{ site.title }}
     </a>
   </div>
 </nav>
