--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,7 @@
       </div>
       <div class="text-center mt-3">
           <p>&copy; 2024 Learn Python. All rights reserved.</p>
+          <p><a href="{{ site.baseurl }}/Privacy-Policy" class="text-light">Privacy Policy</a></p>
       </div>
   </div>
 </footer>
