--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,15 @@
   <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4967292172494506"
     crossorigin="anonymous"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M8HRHQKJ1S"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-M8HRHQKJ1S');
+  </script>
 </body>
 
 </html>
