--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,6 +63,10 @@
 
     gtag('config', 'G-M8HRHQKJ1S');
   </script>
+  <!-- Event snippet for Page view conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-11486985179/HxnkCMKi9I4ZENv3teUq'});
+</script>
 </body>
 
 </html>
