--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,13 +69,13 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4967292172494506"
     crossorigin="anonymous"></script>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-03MC8M4VK2"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PJ6HG5PGXP"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-03MC8M4VK2');
+    gtag('config', 'G-PJ6HG5PGXP');
   </script>
   <!-- Event snippet for Page view conversion page -->
   <script>
