--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,7 +1,7 @@
 <aside id="sidebar" class="sticky-top">
   <ul class="sidebar-nav">
     <li class="sidebar-item">
-      <a href="{{ 001-Introduction-to-Python | prepend: site.baseurl }}/" class="sidebar-link">Introduction to Python</a>
+      <a href="{{ '001-Introduction-to-Python' | prepend: site.baseurl }}/" class="sidebar-link">Introduction to Python</a>
     </li>
   </ul>
 </aside>
