--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -75,6 +75,11 @@ h1, h2, h3, h4, h5, h6
   @media (min-width: 500px)
     margin: 30px
 
+@media (min-width: 768px)
+  #sidebarCollapse
+    &.collapse
+      display: block
+
 .highlighter-rouge
   margin: 2rem 0
 
