--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
           <div class="col-md-6">
               <h5>Say Hi to me</h5>
               <ul class="list-unstyled">
-                  <li><i class="bi-envelope" style="font-size: 1.2rem; color: cornflowerblue;"></i>Email: <a href="mailto:hi@zartosht.dev">Hi@Zartosht.dev</a></li>
-                  <li><i class="bi-github" style="font-size: 1.2rem; color: cornflowerblue;"></i>GitHub: <a target="_blank" href="https://github.com/zartosht/learning-python" class="text-light">Learning Python with Zartosht</a></li>
+                  <li><i class="bi-envelope" style="font-size: 1.2rem; color: cornflowerblue; margin-right: 1rem;"></i>Email: <a href="mailto:hi@zartosht.dev">Hi@Zartosht.dev</a></li>
+                  <li><i class="bi-github" style="font-size: 1.2rem; color: cornflowerblue; margin-right: 1rem;"></i>GitHub: <a target="_blank" href="https://github.com/zartosht/learning-python" class="text-light">Learning Python with Zartosht</a></li>
               </ul>
           </div>
       </div>
