--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -5,39 +5,39 @@
   <!-- <div class="collapse" id="sidebarCollapse"> -->
   <ul class="sidebar-nav">
     <li class="sidebar-item">
-      <a href="{{ '001-Introduction-to-Python' | prepend: site.baseurl }}/" class="sidebar-link">Introduction to
+      <a href="{{ '001-Introduction-to-Python' | prepend: site.baseurl }}" class="sidebar-link">Introduction to
         Python</a>
     </li>
     <li class="sidebar-item">
-      <a href="{{ '002-Basics-of-Python' | prepend: site.baseurl }}/" class="sidebar-link">Basics of Python</a>
+      <a href="{{ '002-Basics-of-Python' | prepend: site.baseurl }}" class="sidebar-link">Basics of Python</a>
     </li>
     <li class="sidebar-item">
-      <a href="{{ '003-Control-Structures' | prepend: site.baseurl }}/" class="sidebar-link">Control Structures</a>
+      <a href="{{ '003-Control-Structures' | prepend: site.baseurl }}" class="sidebar-link">Control Structures</a>
     </li>
     <li class="sidebar-item">
-      <a href="{{ '004-Functions-and-Modules' | prepend: site.baseurl }}/" class="sidebar-link">Functions and
+      <a href="{{ '004-Functions-and-Modules' | prepend: site.baseurl }}" class="sidebar-link">Functions and
         Modules</a>
     </li>
     <li class="sidebar-item">
-      <a href="{{ '005-Data-Structures' | prepend: site.baseurl }}/" class="sidebar-link">Data Structures</a>
+      <a href="{{ '005-Data-Structures' | prepend: site.baseurl }}" class="sidebar-link">Data Structures</a>
     </li>
     <li class="sidebar-item">
-      <a href="{{ '006-Object-Oriented-Programming-in-Python' | prepend: site.baseurl }}/"
+      <a href="{{ '006-Object-Oriented-Programming-in-Python' | prepend: site.baseurl }}"
         class="sidebar-link">Object-Oriented Programming in Python</a>
     </li>
     <li class="sidebar-item">
-      <a href="{{ '007-Working-with-Files' | prepend: site.baseurl }}/" class="sidebar-link">Working with Files</a>
+      <a href="{{ '007-Working-with-Files' | prepend: site.baseurl }}" class="sidebar-link">Working with Files</a>
     </li>
     <li class="sidebar-item">
-      <a href="{{ '008-Error-and-Exception-Handling' | prepend: site.baseurl }}/" class="sidebar-link">Error and
+      <a href="{{ '008-Error-and-Exception-Handling' | prepend: site.baseurl }}" class="sidebar-link">Error and
         Exception Handling</a>
     </li>
     <li class="sidebar-item">
-      <a href="{{ '009-Libraries and Frameworks' | prepend: site.baseurl }}/" class="sidebar-link">Libraries and
+      <a href="{{ '009-Libraries and Frameworks' | prepend: site.baseurl }}" class="sidebar-link">Libraries and
         Frameworks</a>
     </li>
     <li class="sidebar-item">
-      <a href="{{ '010-Advanced-Topics' | prepend: site.baseurl }}/" class="sidebar-link">Advanced Topics</a>
+      <a href="{{ '010-Advanced-Topics' | prepend: site.baseurl }}" class="sidebar-link">Advanced Topics</a>
     </li>
   </ul>
   <!-- </div> -->
