--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -33,7 +33,7 @@
         Exception Handling</a>
     </li>
     <li class="sidebar-item">
-      <a href="{{ '009-Libraries and Frameworks' | prepend: site.baseurl }}" class="sidebar-link">Libraries and
+      <a href="{{ '009-Libraries-and-Frameworks' | prepend: site.baseurl }}" class="sidebar-link">Libraries and
         Frameworks</a>
     </li>
     <li class="sidebar-item">
