--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -28,6 +28,14 @@
     <li class="sidebar-item">
       <a href="{{ '007-Working-with-Files' | prepend: site.baseurl }}" class="sidebar-link">Working with Files</a>
     </li>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4967292172494506"
+      crossorigin="anonymous"></script>
+    <!-- Vertical ads -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4967292172494506" data-ad-slot="2495801202"
+      data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <li class="sidebar-item">
       <a href="{{ '008-Error-and-Exception-Handling' | prepend: site.baseurl }}" class="sidebar-link">Error and
         Exception Handling</a>
