--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,14 @@
       </div>
       <main class="col-md-8">
         {{ content }}
+        <script async
+          src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4967292172494506"
+          crossorigin="anonymous"></script>
+        <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article"
+          data-ad-format="fluid" data-ad-client="ca-pub-4967292172494506" data-ad-slot="8002730012"></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
       </main>
     </div>
   </div>
