--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -93,12 +93,12 @@ h1, h2, h3, h4, h5, h6
     &.collapse
       display: block
 
-.highlighter-rouge
-  margin: 2rem 0
+// .highlighter-rouge
+//   margin: 2rem 0
 
-  .highlight
-    padding: 0.5rem
-    border-radius: 1rem
+//   .highlight
+//     padding: 0.5rem
+//     border-radius: 1rem
 
 .container-fluid
   padding: 0
@@ -106,9 +106,9 @@ h1, h2, h3, h4, h5, h6
 footer
   margin-top: 2rem
 
-div
-  &.highlight
-    position: relative
+// div
+//   &.highlight
+//     position: relative
 
 .copy-btn, .run-btn
   background: none
