--- a/_includes/monaco.html
+++ b/_includes/monaco.html
@@ -1,3 +1,3 @@
 <script>
-  require.config({ paths: { 'vs': 'https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs' }});
+  // require.config({ paths: { 'vs': 'https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs' }});
 </script>
