--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,7 @@
   </a>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="{{ 'assets/js/error-stack-parser.js' | relative_url }}"></script>
   <script src="{{ 'assets/js/loader.js' | relative_url }}"></script>
   <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
