--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -8,7 +8,7 @@
 
   &:focus
     output: none
-    border: none
+      border: none
 
 body, button, input, select, optgroup, textarea, li
   font-family: 'Roboto', sans-serif
@@ -117,3 +117,5 @@ footer
   flex-wrap: nowrap
   justify-content: space-between
 
+.monaco-editor
+  position: absolute !important
