--- a/_includes/monaco.html
+++ b/_includes/monaco.html
@@ -22,7 +22,7 @@
         const height = codeContainer.offsetHeight;
         // // B. The editor does not need to scan the container, 
         // // avoiding a forced layout
-        codeContainer.layout({ width, height });
+        editor.layout({ width, height });
       });
     };
 
