--- a/_includes/monaco.html
+++ b/_includes/monaco.html
@@ -23,7 +23,7 @@
 
         // The editor is ready to be used
         // Hide the original code
-        pre.style.display = 'none';
+        // pre.style.display = 'none';
       });
     };
 
